@@ -345,6 +345,7 @@ enum attr_type
   ATTR_LINK_SECTION,
   ATTR_LINK_CONSTRUCTOR,
   ATTR_LINK_DESTRUCTOR,
+  ATTR_THREAD_LOCAL_STORAGE,
   ATTR_WEAK_EXTERNAL
 };
 
