@@ -1631,6 +1631,14 @@ process_attributes (tree decl, struct attrib *attr_list)
 	DECL_STATIC_DESTRUCTOR (decl) = 1;
 	TREE_USED (decl) = 1;
 	break;
+
+      case ATTR_THREAD_LOCAL_STORAGE:
+	if (targetm.have_tls)
+	  DECL_TLS_MODEL (decl) = decl_default_tls_model (decl);
+	else
+	  post_error ("thread-local storage not supported for this target",
+		      attr_list->error_point);
+	break;
       }
 }
 
