@@ -1,3 +1,8 @@
+2009-04-08  Tristan Gingold  <gingold@adacore.com>
+
+	* gcc-interface/utils.c, gcc-interface/decl.c, gcc-interface/gigi.h:
+	Add support for pragma Thread_Local_Storage
+	
 2009-04-08  Ed Schonberg  <schonberg@adacore.com>
 
 	* inline.adb (Back_End_Cannot_Inline): Do not mark a body as inlineable
